--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-      <h1>Discover hidden places in the world around you</h1>
+    <!-- "Main section" -->
+  <h1>Discover hidden places in the world around you</h1>
 
-      <div id="elink">
-        <a href="https://5hu5eip1k3mlkui2aef9scmcctvorvn48hdi6tkvmm4ahl8f1dd0.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
-      </div>
-  </body>
+  <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+  <video autoplay muted loop>
+    <source src="resources/videos/excursion.mp4" type="video/mp4">
+  </video>
+
+  <!-- "First supporting section" -->
+  <h2>Your personal travel guide</h2>
+
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+  <p><img src="resources/images/camp.jpg" alt=""></p>
+
+  <!-- "Second supporting section" -->
+  <p><img class="app" src="resources/images/phone.png"></p>
+
+  <h2>Coming Soon for iPhone and Android</h2>
+
+  <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+  <!-- "Footer" -->
+  <div class="footer">
+    <p>&copy; Excursion</p>
+  </div>
 </html>
